--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
   <!-- 初回ログイン：名前入力モーダル -->
   <div id="nameOverlay" class="overlay">
     <div class="modal">
-      <h3>お名前の入力</h3>
-      <div class="small">初回のみ。苗字・名前を入力してください（予約・管理画面に反映されます）</div>
+      <h3>お名前の入力(初回のみ)</h3>
+      <div class="small">苗字・名前を入力してください（予約・管理画面に反映されます）</div>
 
       <label>苗字</label>
       <input id="lastName" type="text" placeholder="例：山田" />
