--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 
 <body>
   <div class="topbar">
-    <b>社用車予約</b>
+    <h1><b>社用車予約</b></h1><br>
     <span id="status">初期化中…</span>
-    <span class="badge">車：</span>
+    <br><span class="badge">車：</span>
     <select id="car"></select>
     <button id="reloadBtn">再読み込み</button>
   </div>
