--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 <body>
   <div class="topbar">
-    <h1><b>社用車予約</b></h1><br>
+    <h2><b>社用車予約</b></h2><br><br>
     <span id="status">初期化中…</span>
     <br><span class="badge">車：</span>
     <select id="car"></select>
