--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>社用車予約</title>
+  <title>アスタスク株式会社　社用車予約</title>
 
   <style>
     body{font-family:system-ui, -apple-system, "Segoe UI", sans-serif; margin:12px; line-height:1.5;}
@@ -72,7 +72,7 @@
 
 <body>
   <div class="topbar">
-    <h2><b>社用車予約</b></h2><br><br>
+    <h2><b>アスタスク株式会社　社用車予約</b></h2><br><br>
     <span id="status">初期化中…</span>
     <br><span class="badge">車：</span>
     <select id="car"></select>
