--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 
   <style>
     body{font-family:system-ui, -apple-system, "Segoe UI", sans-serif; margin:12px; line-height:1.5;}
-    .topbar{display:flex; gap:10px; align-items:center; flex-wrap:wrap; margin-bottom:10px;}
+    .topbar{
+  display:flex;
+  flex-direction: column;   /* ← 縦並び */
+  align-items:flex-start;   /* ← 左揃え */
+  gap:6px;
+  margin-bottom:10px;
+}
+
     .badge{font-size:13px; color:#444;}
     select, button, input{padding:10px; font-size:16px;}
     #status{font-size:13px; color:#666;}
@@ -72,9 +79,10 @@
 
 <body>
   <div class="topbar">
-    <h2><b>アスタスク株式会社　社用車予約</b></h2><br><br>
+    <h2><b>アスタスク株式会社　社用車予約</b></h2>
     <span id="status">初期化中…</span>
-    <br><span class="badge">車：</span>
+    <div style="display:flex; gap:8px; align-items:center;">
+    <span class="badge">車：</span>
     <select id="car"></select>
     <button id="reloadBtn">再読み込み</button>
   </div>
@@ -117,8 +125,8 @@
   <!-- 初回ログイン：名前入力モーダル -->
   <div id="nameOverlay" class="overlay">
     <div class="modal">
-      <h3>お名前の入力(初回のみ)</h3>
-      <div class="small">苗字・名前を入力してください（予約・管理画面に反映されます）</div>
+      <h3>お名前の入力</h3>
+      <div class="small">初回のみ。苗字・名前を入力してください（予約・管理画面に反映されます）</div>
 
       <label>苗字</label>
       <input id="lastName" type="text" placeholder="例：山田" />
