--- a/admin.html
+++ b/admin.html
@@ -20,9 +20,10 @@
     .muted{color:#777; font-size:12px;}
     .ok{color:green;}
     .ng{color:#c00;}
-    .gridCars{display:grid; grid-template-columns: 120px 1fr 120px; gap:10px; align-items:center; margin-top:10px;}
+    .gridCars{display:grid; grid-template-columns: 80px 1fr 90px; gap:10px; align-items:center; margin-top:10px;}
     .gridCars div{font-size:14px;}
     .gridCars input{width:100%; box-sizing:border-box;}
+    h3{margin:0 0 6px 0;}
   </style>
 
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
@@ -37,8 +38,8 @@
 
   <!-- 車名編集 -->
   <div class="card">
-    <h3 style="margin:0 0 6px 0;">車名の編集</h3>
-    <div class="muted">※ここで変更すると予約画面・管理画面の表示に即反映されます</div>
+    <h3>車名の編集</h3>
+    <div class="muted">※ここで変更すると予約画面・管理画面の表示に反映されます</div>
     <div id="carsEditor" class="gridCars"></div>
     <div id="carMsg" class="small"></div>
     <div style="margin-top:10px;">
@@ -48,7 +49,7 @@
 
   <!-- 予約一覧 -->
   <div class="card">
-    <h3 style="margin:0 0 6px 0;">予約一覧</h3>
+    <h3>予約一覧</h3>
 
     <div class="row">
       <div>
@@ -76,10 +77,10 @@
   </div>
 
 <script>
-  // ✅ あなたの値
+  // ✅ あなたの値（正しいANON_KEYに統一）
   const LIFF_ID = "2008829976-rJa7ANlR";
   const SUPABASE_URL = "https://jmobmcphzqxbybkqpwfd.supabase.co";
-  const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6Ikpwb2JtY3BoenF4Ynlia3Fwd2ZkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2NjkyMTMsImV4cCI6MjA4MzI0NTIxM30.TTaR9DKpCtkWa3RFB9zE7IydwhD9bWGIbp83YbUX8v8";
+  const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imptb2JtY3BoenF4Ynlia3Fwd2ZkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2NjkyMTMsImV4cCI6MjA4MzI0NTIxM30.TTaR9DKpCtkWa3RFB9zE7IydwhD9bWGIbp83YbUX8v8";
 
   // ★ここに「あなたの管理者userId」を入れる
   const ADMIN_USER_IDS = [
@@ -104,7 +105,21 @@
     el.className = "small " + (ok ? "ok" : "ng");
   }
 
+  function escapeHtml(str){
+    return (str ?? "")
+      .replaceAll("&","&amp;")
+      .replaceAll("<","&lt;")
+      .replaceAll(">","&gt;")
+      .replaceAll('"',"&quot;");
+  }
+
+  function carNameById(id){
+    const c = carsCache.find(x => Number(x.id) === Number(id));
+    return c ? c.name : `車ID:${id}`;
+  }
+
   async function loadUserFullName(){
+    // users テーブル（苗字・名前）から取得（無ければLINE表示名）
     const { data, error } = await sb
       .from("users")
       .select("last_name, first_name")
@@ -112,14 +127,13 @@
       .maybeSingle();
 
     if(error){
-      console.error(error);
+      console.error("users load error:", error);
       $("displayName").textContent = me.displayName;
       return;
     }
-
     if(data && data.last_name && data.first_name){
       $("displayName").textContent = `${data.last_name} ${data.first_name}`;
-    } else {
+    }else{
       $("displayName").textContent = me.displayName;
     }
   }
@@ -134,7 +148,6 @@
       `<option value="">（全車）</option>` +
       data.map(c => `<option value="${c.id}">${c.name}</option>`).join("");
 
-    // 車名編集UI
     renderCarsEditor();
   }
 
@@ -158,10 +171,6 @@
     setCarMsg("");
   }
 
-  function escapeHtml(str){
-    return (str ?? "").replaceAll("&","&amp;").replaceAll("<","&lt;").replaceAll(">","&gt;").replaceAll('"',"&quot;");
-  }
-
   async function saveCarName(id){
     try{
       const input = document.getElementById(`carName_${id}`);
@@ -173,15 +182,14 @@
 
       const { error } = await sb.from("cars").update({ name: newName }).eq("id", id);
       if(error){
-        console.error(error);
+        console.error("cars update error:", error);
         setCarMsg("保存に失敗しました（RLS/権限を確認）", false);
         return;
       }
 
-      // ローカル反映
-      carsCache = carsCache.map(c => c.id === id ? ({...c, name:newName}) : c);
+      carsCache = carsCache.map(c => Number(c.id) === Number(id) ? ({...c, name:newName}) : c);
 
-      // プルダウンにも反映
+      // 検索プルダウンも更新
       const opt = $("car").querySelector(`option[value="${id}"]`);
       if(opt) opt.textContent = newName;
 
@@ -191,8 +199,6 @@
       setCarMsg("保存時にエラーが発生しました", false);
     }
   }
-
-  // onclick から呼べるように
   window.saveCarName = saveCarName;
 
   async function search(){
@@ -202,7 +208,7 @@
 
     let q = sb
       .from("reservations")
-      .select("car_id, user_name, user_id, start_time, end_time, note, created_at, cars(name)")
+      .select("id, car_id, user_name, user_id, start_time, end_time, note, created_at")
       .order("start_time", { ascending: true })
       .limit(500);
 
@@ -212,8 +218,8 @@
 
     const { data, error } = await q;
     if(error){
-      console.error(error);
-      $("result").textContent = "検索エラー：設定値/テーブルを確認";
+      console.error("search error:", error);
+      $("result").textContent = "検索エラー：DB/RLS/設定を確認";
       return;
     }
 
@@ -241,16 +247,16 @@
         </thead>
         <tbody>
           ${data.map(r=>{
-            const car = r.cars?.name ?? ("車ID:" + r.car_id);
+            const car = carNameById(r.car_id);
             const s = new Date(r.start_time).toLocaleString("ja-JP", { hour12:false });
             const e = new Date(r.end_time).toLocaleString("ja-JP", { hour12:false });
             const note = r.note ?? "";
             return `<tr>
-              <td>${car}</td>
-              <td>${s}</td>
-              <td>${e}</td>
-              <td>${r.user_name}</td>
-              <td>${note}</td>
+              <td>${escapeHtml(car)}</td>
+              <td>${escapeHtml(s)}</td>
+              <td>${escapeHtml(e)}</td>
+              <td>${escapeHtml(r.user_name ?? "")}</td>
+              <td>${escapeHtml(note)}</td>
             </tr>`;
           }).join("")}
         </tbody>
@@ -276,7 +282,7 @@
     }
     const header = ["car","start_time","end_time","user_name","user_id","note"].join(",");
     const lines = rowsCache.map(r=>{
-      const car = (r.cars?.name ?? ("car_id:" + r.car_id)).replaceAll('"','""');
+      const car = (carNameById(r.car_id) ?? "").replaceAll('"','""');
       const note = (r.note ?? "").replaceAll('"','""');
       return [
         `"${car}"`,
@@ -304,12 +310,12 @@
     me.displayName = profile.displayName;
 
     if(!ADMIN_USER_IDS.includes(me.userId)){
-      $("status").innerHTML = "アクセス拒否（管理者のみ）";
+      $("status").textContent = "アクセス拒否（管理者のみ）";
       $("tableWrap").innerHTML = "";
       return;
     }
 
-    $("status").innerHTML = `管理者：${me.displayName}`;
+    $("status").textContent = `管理者：${me.displayName}`;
 
     await loadUserFullName();
     await loadCars();
@@ -320,8 +326,8 @@
   $("reloadCarsBtn").addEventListener("click", loadCars);
 
   init().catch(e=>{
-    console.error(e);
-    $("status").textContent = "初期化エラー：LIFF/Supabase設定を確認";
+    console.error("init error:", e);
+    $("status").textContent = "初期化エラー：LIFF/Supabase設定を確認（Consoleを見てください）";
   });
 </script>
 </body>
